# chealth

./: CLAUDE.md  README.md  marketplace.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
docs/: guide-claude-md-best-practices.md
skills/chealth/: SKILL.md  reference.md
src/chealth/: __main__.py  cli.py  formatters.py  models.py  runner.py
src/chealth/checks/: __init__.py  architecture_paths.py  build_commands.py  emphasis_keywords.py  file_discovery.py  gitignore_check.py  import_resolution.py  line_count.py  markdown_structure.py  progressive_disclosure.py  repo_etiquette.py  universal_applicability.py  what_why_how.py
tests/: conftest.py  test_cli.py  test_formatters.py  test_runner.py
tests/fixtures/broken_imports/: CLAUDE.md
tests/fixtures/deep_imports/: CLAUDE.md
tests/fixtures/deep_imports/docs/: extra-rules.md
tests/fixtures/healthy/: .gitignore  CLAUDE.md
tests/fixtures/healthy/.claude/rules/: testing.md
tests/fixtures/healthy/src/api/: CLAUDE.md
tests/fixtures/minimal/: CLAUDE.md
tests/fixtures/no_gitignore/: CLAUDE.local.md  CLAUDE.md
tests/fixtures/oversized/: CLAUDE.md
tests/fixtures/unstructured/: CLAUDE.md
tests/test_checks/: test_architecture_paths.py  test_build_commands.py  test_emphasis_keywords.py  test_file_discovery.py  test_gitignore_check.py  test_import_resolution.py  test_line_count.py  test_markdown_structure.py  test_progressive_disclosure.py  test_repo_etiquette.py  test_universal_applicability.py  test_what_why_how.py
