[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chealth"
version = "0.1.1"
description = "CLI tool to check CLAUDE.md health against Anthropic best practices"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{name = "Daniel Thomas"}]
keywords = ["claude-code", "claude-md", "linter", "best-practices", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/danielithomas/chealth"
"Bug Tracker" = "https://github.com/danielithomas/chealth/issues"

[project.scripts]
chealth = "chealth.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chealth"]

[dependency-groups]
dev = ["pytest"]
